--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
                     <div class="block-right">
                         <div class="contact-area">
                             <ul>
-                                <li><a href="https://www.facebook.com/ILoveMovieValleyX"><i class="fa fa-facebook-square"></i>I
-                                        love Movie Valley X</a></li>
                                 <li><a href="mailto:smovie2017@gmail.com"><i class="fa fa-envelope-o"></i>smovie2017@gmail.com</a></li>
                             </ul>
                         </div>
@@ -73,37 +71,6 @@
         </div><!-- .container close -->
     </section><!-- #heder close -->
 
-    <!-- Slider Start
-        ============================================================== -->
-    <!-- 
-    <section id="slider">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="block">
-                        <div class="slider-text-area">
-                            <div class="slider-text">
-                                <h2>Movie Valley X<br></h2>
-                                <p class="sub-slider-text">Duis bibendum diam</p>
-                                <p class="slider-p">Donec elementum mollis magna id aliquet. Etiam eleifend urna eget
-                                    sem <br>
-                                    sagittis feugiat. Pellentesque habitant morbi tristique senectus et <br>
-                                    netus et malesuada fames ac turpis egestas.</p>
-                                    <a href="https://goo.gl/mC8BeP">
-                                        <img src="img/btn_download.png" style="margin-top: 30px"/>
-                                    </a>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>#slider close
- -->
-    <!-- contant-1 start
-        ===================================================== -->
-
     <section id="contant-1">
         <div class="container">
             <div class="row">
@@ -111,14 +78,13 @@
                     <div class="block-left">
                         <div class="contant-1-text-area">
                             <div class="contant-1-head">
-                                <h1>Movie Valley X<br> Ứng dụng xem phim HD trên IOS trải nghiệm tốt nhất</h1>
+                                <h1>Movie Valley X<br> Ứng dụng giới thiệu phim trên IOS trải nghiệm tốt nhất</h1>
                             </div>
                             <div class="contant-1-text">
                                 <h2>Thế giới điện ảnh trong tầm tay<br />Cuộc sống ngập tràn sắc màu.</h2>
-                                <p>Ứng dụng xem phim HD trực tuyến hoàn toàn miễn phí với hình ảnh sắc nét, tốc độ cực
-                                    nhanh, cùng kho phim khổng lồ.<br />Không chỉ làm hài lòng các bạn trẻ với các phim
-                                    bom tấn, phim bộ, TV Show, ứng dụng còn có vô số những chương trình gameshow, phim
-                                    hoạt hình, phù hợp mọi lứa tuổi.</p>
+                                <p>Movie Valley X bao gồm kho dữ liệu điện ảnh khổng lồ và được cập nhật liên tục - Thế giới muôn sắc màu, phong phú và đa dạng trong tầm tay.<br/><br/>
+                                    Ứng dụng với nhiều tính năng quen thuộc dễ sử dụng sẽ giúp bạn có những trải nghiệm thú vị, tuyệt vời không thể nào quên.<br/><br/>
+                                    Hi vọng ứng dụng sẽ giúp bạn và người thân có những giây phút thật vui vẻ, thoải mái.</p>
                                 <a href="https://goo.gl/mC8BeP">
                                     <img src="img/btn_download.png" style="margin-top: 30px" />
                                 </a>
@@ -137,138 +103,6 @@
         </div><!-- .container close -->
     </section><!-- #contant-1 close -->
 
-
-    <!-- Gallery Start
-        ============================================================= -->
-
-    <section id="gallery">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="block-top">
-                        <div class="gallery-area">
-                            <h1>Mang đến cho các bạn những tính năng hoàn hảo nhất hiện nay</h1>
-                            <p>Cùng gia đình, bạn bè tận hưởng những bộ phim tuyệt vời<br/>Tại sao không? Hãy thử ngay để cảm nhận!</p>
-                        </div>
-                    </div>
-                </div><!-- .col-md-12 -->
-            </div><!-- .row close -->
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="block-bottom">
-                        <div class="gallery-list" id="owl-demo">
-                            <div class="gallery-items item">
-                                <div class="gallery-img">
-                                    <img src="img/gallery-item-8.png" alt="img">
-                                </div>
-                                <div class="gallery-items-text">
-                                    <p>"Lắc lắc chọn phim" - Tính năng thú vị chỉ có tại Movie Valley X.</p>
-                                </div>
-                            </div>
-                            <div class="gallery-items item">
-                                <div class="gallery-img">
-                                    <img src="img/gallery-item-4.png" alt="img">
-                                </div>
-                                <div class="gallery-items-text">
-                                    <p>Giao diện xem phim đẹp và đơn giản <br>
-                                        Mục đề xuất dành cho những tín đồ yêu phim.</p>
-                                </div>
-                            </div>
-                            <div class="gallery-items item">
-                                <div class="gallery-img">
-                                    <img src="img/gallery-item-5.png" alt="img">
-                                </div>
-                                <div class="gallery-items-text">
-                                    <p>Danh sách các bộ phim theo đánh giá iMDB<br>
-                                        Không khó để tìm kiếm các bộ phim chất lượng.<br></p>
-                                </div>
-                            </div>
-
-                            <div class="gallery-items item">
-                                <div class="gallery-img">
-                                    <img src="img/gallery-item-1.png" alt="img">
-                                </div>
-                                <div class="gallery-items-text">
-                                    <p>Thoả sức khám phá những bộ phim mới nhất, hay nhất<br />
-                                        Không gian giải trí phong phú, đặc sắc</p>
-                                </div>
-                            </div>
-                            <div class="gallery-items item">
-                                <div class="gallery-img">
-                                    <img src="img/gallery-item-2.png" alt="img">
-                                </div>
-                                <div class="gallery-items-text">
-                                    <p>Quản lý tiện ích linh hoạt <br>
-                                        Theo dõi nhanh các phim đang xem, không cần mở ứng dụng</p>
-                                </div>
-                            </div>
-
-                            <div class="gallery-items item">
-                                <div class="gallery-img">
-                                    <img src="img/gallery-item-6.png" alt="img">
-                                </div>
-                                <div class="gallery-items-text">
-                                    <p>Lựa chọn các bộ phim yêu thích theo nhu cầu.<br></p>
-                                </div>
-                            </div>
-                            <div class="gallery-items item">
-                                <div class="gallery-img">
-                                    <img src="img/gallery-item-3.png" alt="img">
-                                </div>
-                                <div class="gallery-items-text">
-                                    <p>Tìm kiếm tiện lợi, nhanh chóng <br></p>
-                                </div>
-                            </div>
-                            <div class="gallery-items item">
-                                <div class="gallery-img">
-                                    <img src="img/gallery-item-7.png" alt="img">
-                                </div>
-                                <div class="gallery-items-text">
-                                    <p>Các gameshow nổi tiếng cũng luôn được cập nhật hàng ngày.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- .col-md-12 close -->
-            </div><!-- .row close -->
-        </div><!-- .container close -->
-    </section><!-- #gallery close -->
-
-
-    <!-- Contant-2 Start
-        =============================================================== -->
-
-    <section id="contant-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="block-left">
-                        <div class="contant-2-img">
-                            <img src="img/mobile-phon-3.png" alt="img">
-                        </div>
-                    </div>
-                </div><!-- .col-md-6 close -->
-
-                <div class="col-md-6">
-                    <div class="block-right">
-                        <div class="contant-2-text-area">
-                            <div class="contant-2-header">
-                                <h1>Lắc lắc chọn phim</h2>
-                            </div>
-                            <div class="contant-2-text">
-                                <h2>Đơn giản mà thú vị.<br/>Bạn đã thử chưa?</h3>
-                                    <p>Mình tin các bạn ai cũng có lúc mở ứng dụng ra mà chưa biết nên xem phim gì hôm nay. Vậy hên xui để Movie Valley X chọn giúp bạn nhé.<br/>
-                                        Lắc lắc máy tại màn hình danh sách phim tương ứng (Khám phá, phim bộ, phim lẻ,...), sẽ có bộ phim được chọn ngẫu nhiên theo thể loại hiện tại dành cho bạn!<br/>
-                                        Chúc các bạn xem phim vui vẻ với tính năng mới lạ này.</p>
-                                    <a href="https://goo.gl/mC8BeP" class="btn btn-default edit-button-3">Trải nghiệm ngay</a>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- .col-md-6 close -->
-            </div><!-- .row close -->
-        </div><!-- .container close -->
-    </section><!-- #contant-2 close -->
-
     <!-- footer Start
         ====================================================================== -->
 
@@ -280,7 +114,6 @@
                         <div class="footer-contant">
                             <h3>Movie Valley X</h3>
                             <div class="social-icon">
-                                <a href="https://www.facebook.com/ILoveMovieValleyX"><i class="fa fa-facebook"></i></a>
                                 <a href="mailto:smovie2017@gmail.com"><i class="fa fa-google"></i></a>
                             </div>
                             <h4>Copyright © 2017 Movie Valley X | All Rights Reserved</h4>
