--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                                 <a href="https://goo.gl/mC8BeP">
                                     <img src="img/btn_download.png" style="margin-top: 30px" />
                                 </a>
+
+                                <a href="https://play.google.com/store/apps/details?id=com.vn.movievalleyx">
+                                    <img src="img/btn_download_android.png" style="margin-top: 30px; margin-left: 30px;" />
+                                </a>
                             </div>
                         </div>
                     </div>
