--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="block-left">
                         <div class="contant-1-text-area">
                             <div class="contant-1-head">
-                                <h1>Movie Valley X<br> Ứng dụng xem phim HD trên IOS trải nghiệm tốt nhất</h1>
+                                <h1>Movie Valley X<br> Ứng dụng xem phim HD trên điện thoại trải nghiệm tốt nhất</h1>
                             </div>
                             <div class="contant-1-text">
                                 <h2>Thế giới điện ảnh trong tầm tay<br />Cuộc sống ngập tràn sắc màu.</h2>
