--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     <img src="img/btn_download.png" style="margin-top: 30px" />
                                 </a>
 
-                                <a href="https://play.google.com/store/apps/details?id=com.vn.movievalleyx">
+                                <a href="https://goo.gl/we4T2t">
                                     <img src="img/btn_download_android.png" style="margin-top: 30px; margin-left: 30px;" />
                                 </a>
                             </div>
