--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
                                     bom tấn, phim bộ, TV Show, ứng dụng còn có vô số những chương trình gameshow, phim
                                     hoạt hình, phù hợp mọi lứa tuổi.</p>
                                 <!-- <a href="https://goo.gl/mC8BeP"> -->
-                                    <img src="img/btn_download.png" style="margin-top: 30px" onClick="showAlert()"/>
+                                    <!-- <img src="img/btn_download.png" style="margin-top: 30px" onClick="showAlert()"/> -->
                                 <!-- </a> -->
 
-                                <a href="https://goo.gl/we4T2t">
+                                <!-- <a href="https://goo.gl/we4T2t">
                                     <img src="img/btn_download_android.png" style="margin-top: 30px; margin-left: 30px;" />
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                     </div>
