--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                                     <!-- <img src="img/btn_download.png" style="margin-top: 30px" onClick="showAlert()"/> -->
                                 <!-- </a> -->
 
-                                <!-- <a href="https://goo.gl/we4T2t">
+                                <a href="https://app.box.com/s/s8ydd2oyorz568tzrye7p8og3s512d3b">
                                     <img src="img/btn_download_android.png" style="margin-top: 30px; margin-left: 30px;" />
-                                </a> -->
+                                </a>
                             </div>
                         </div>
                     </div>
