update link google play

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     <!-- <img src="img/btn_download.png" style="margin-top: 30px" onClick="showAlert()"/> -->
                                 <!-- </a> -->
 
-                                <a href="https://app.box.com/s/s8ydd2oyorz568tzrye7p8og3s512d3b">
+                                <a href="https://play.google.com/store/apps/details?id=mobile.app.movallex">
                                     <img src="img/btn_download_android.png" style="margin-top: 30px; margin-left: 30px;" />
                                 </a>
                             </div>
